# triton-anchor

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  ROADMAP.md  envsetup.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
csrc/: CMakeLists.txt
csrc/bindings/: triton_anchor_ext.cc  triton_anchor_passes.cc
csrc/include/: CMakeLists.txt
csrc/include/mlir-ext/Dialect/: CMakeLists.txt
csrc/include/mlir-ext/Dialect/MathExt/IR/: CMakeLists.txt  MathExt.h  MathExtBase.td  MathExtOps.td
csrc/include/triton-anchor/Dialect/Auxiliary/IR/: AuxiliaryOps.td
csrc/include/triton-anchor/Dialect/LinalgExt/IR/: LinalgExtBase.td  LinalgExtOps.td  LinalgExtStructedOps.td
csrc/include/triton-anchor/Dialect/MathExt/IR/: MathExtOps.td
csrc/include/triton-shared/Analysis/: MaskAnalysis.h  OpFoldResultUtils.h
csrc/include/triton-shared/AnalysisStructured/: PtrAnalysis.h
csrc/include/triton-shared/Conversion/: CMakeLists.txt
csrc/include/triton-shared/Conversion/ReconcilePtrCasts/: CMakeLists.txt
csrc/include/triton-shared/Conversion/TritonArithToLinalg/: ConversionPatterns.hpp  ConversionPatterns_FlagTree.hpp
csrc/include/triton-shared/Conversion/TritonToLinalgExperimental/: Passes.h
csrc/include/triton-shared/Conversion/TritonToUnstructured/: AtomicOpsConverter.h
csrc/include/triton-shared/Dialect/TritonStructured/IR/: TritonStructuredDialect.td
csrc/include/ttgpu/triton/Conversion/TritonGPUToLLVM/: Utility.h
csrc/include/ttgpu/triton/Dialect/Triton/IR/: TritonOps.td
csrc/include/ttgpu/triton/Dialect/TritonGPU/IR/: Dialect.h  TritonGPUAttrDefs.td
csrc/include/ttgpu/triton/Dialect/TritonGPU/Transforms/: Utility.h
csrc/lib/Analysis/: MaskAnalysis.cpp  OpFoldResultUtils.cpp
csrc/lib/AnalysisStructured/: CMakeLists.txt  PtrAnalysis.cpp  PtrAnalysisTS.cpp
csrc/lib/Conversion/: CMakeLists.txt
csrc/lib/Conversion/ReconcilePtrCasts/: CMakeLists.txt  ReconcilePtrCastsPass.cpp
csrc/lib/Conversion/StructuredToMemref/: StructuredToMemref.cpp
csrc/lib/Conversion/TritonArithToLinalg/: CMakeLists.txt  TritonArithToLinalg.cpp  TritonArithToLinalgPass.cpp
csrc/lib/Conversion/TritonToLinalg/: TritonToLinalg.cpp
csrc/lib/Conversion/TritonToLinalgExperimental/: CMakeLists.txt  TritonToLinalgExperimentalPass.cpp
csrc/lib/Conversion/TritonToStructured/: TritonToStructuredPass.cpp
csrc/lib/Conversion/TritonToUnstructured/: TritonToUnstructuredPass.cpp
csrc/lib/Conversion/UnstructuredToMemref/: UnstructuredToMemrefPass.cpp
csrc/lib/Dialect/: CMakeLists.txt
csrc/lib/Dialect/LinalgExt/Utils/: CMakeLists.txt
csrc/lib/Dialect/MathExt/: CMakeLists.txt  MathExtOps.cpp
csrc/lib/Dialect/MathExt/IR/: CMakeLists.txt  MathExtDialect.cpp  MathExtOps.cpp
csrc/lib/Dialect/TritonStructured/IR/: TritonStructuredDialect.cpp  TritonStructuredOps.cpp
csrc/lib/Utils/: Utils.cpp
csrc/lib/ttgpu/: ir.cc
csrc/lib/ttgpu/Analysis/: Utility.cpp
csrc/lib/ttgpu/Conversion/TritonGPUToLLVM/: ElementwiseOpToLLVM.cpp  PrintOpToLLVM.cpp  Utility.cpp
csrc/lib/ttgpu/Conversion/TritonGPUToLLVM/ConvertLayoutOpToLLVM/: SharedToDotOperandFMA.cpp
csrc/lib/ttgpu/Conversion/TritonGPUToLLVM/DotOpToLLVM/: FMA.cpp
csrc/lib/ttgpu/Conversion/TritonToTritonGPU/: TritonToTritonGPUPass.cpp
csrc/lib/ttgpu/Dialect/TritonGPU/IR/: Dialect.cpp
csrc/lib/ttgpu/Dialect/TritonGPU/Transforms/: Coalesce.cpp  ReduceDataDuplication.cpp  RemoveLayoutConversions.cpp  Utility.cpp
docs/: build.md  upgrade_triton.md
python/triton_anchor/: __init__.py  hw_capability.py  pipeline.py
python/triton_anchor/adapters/: base.py  hybrid_adapter.py  registry.py  triton_shared_adapter.py
python/triton_anchor/extensions/: __init__.py  base.py  registry.py
python/triton_anchor/language/: __init__.py
python/triton_anchor/tests/: test_hw_capability.py
tests/: conftest.py  test_discovery.py  test_ops.py  test_smoke.py
triton/: CMakeLists.txt  TRITON_VERSION
triton/backends/: __init__.py
triton/include/triton/Dialect/Triton/IR/: CMakeLists.txt  TritonAttrDefs.td  TritonOps.td
triton/include/triton/Dialect/TritonGPU/IR/: CMakeLists.txt
triton/lib/Analysis/: CMakeLists.txt
triton/lib/Conversion/TritonGPUToLLVM/: CMakeLists.txt
triton/lib/Conversion/TritonToTritonGPU/: CMakeLists.txt  TritonToTritonGPUPass.cpp
triton/lib/Dialect/Triton/IR/: Ops.cpp
triton/lib/Dialect/Triton/Transforms/: CMakeLists.txt  RewriteTensorPointer.cpp
triton/lib/Dialect/TritonGPU/IR/: CMakeLists.txt
triton/lib/Dialect/TritonGPU/Transforms/: CMakeLists.txt
triton/python/src/: ir.cc  ir.h  llvm.cc  main.cc
triton/python/triton/: testing.py
triton/python/triton/backends/: __init__.py
triton/python/triton/compiler/: code_generator.py  hint_manager.py
triton/python/triton/experimental/: __init__.py
triton/python/triton/experimental/tle/: __init__.py
triton/python/triton/experimental/tle/language/: __init__.py  core.py  distributed.py
triton/python/triton/experimental/tle/language/dsa/: __init__.py  core.py  semantic.py  types.py
triton/python/triton/language/: core.py  semantic.py
triton/python/triton/runtime/: autotuner.py  jit.py
triton_anchor/: anchor_ir.py
triton_anchor/adapters/: triton_linalg_adapter.py
upstream/: TRITON_VERSION
upstream/python/src/: ir.cc  main.cc
