cmake_minimum_required(VERSION 3.14)
project(triton_anchor_linalg LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Pybind11
find_package(pybind11 REQUIRED)

# MLIR & LLVM
find_package(MLIR REQUIRED CONFIG)
list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
include(AddLLVM)
include(TableGen)
include(AddMLIR)

# TRITON INTEGRATION
# 默认使用 submodule 中的 Triton 头文件；用户也可以通过环境变量覆盖
if(DEFINED ENV{TRITON_SOURCE_DIR})
    set(TRITON_SOURCE_DIR $ENV{TRITON_SOURCE_DIR})
elseif(NOT DEFINED TRITON_SOURCE_DIR)
    set(TRITON_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/triton")
endif()

if(NOT EXISTS "${TRITON_SOURCE_DIR}/include/triton")
    message(FATAL_ERROR
        "Triton headers not found at: ${TRITON_SOURCE_DIR}/include/triton\n"
        "Please run: git submodule update --init --recursive\n"
        "Or set TRITON_SOURCE_DIR to an existing Triton source tree."
    )
endif()
message(STATUS "Using Triton headers from: ${TRITON_SOURCE_DIR}/include")

# 探测并加入已编译好的 Triton 目录 (用于寻找 Dialect.h.inc 等生成的头文件)
if(DEFINED ENV{TRITON_BUILD_DIR})
    set(TRITON_BUILD_DIR $ENV{TRITON_BUILD_DIR})
endif()
if(TRITON_BUILD_DIR)
    message(STATUS "Using Triton built generated headers from: ${TRITON_BUILD_DIR}/include")
    include_directories(${TRITON_BUILD_DIR}/include)
else()
    message(WARNING "TRITON_BUILD_DIR is not set. If compilation fails due to missing 'triton/Dialect/Triton/IR/Dialect.h.inc', please point TRITON_BUILD_DIR to your compiled Triton python/build/cmake... directory.")
endif()

list(APPEND CMAKE_MODULE_PATH "${TRITON_SOURCE_DIR}/cmake")
# include(TritonMacros) # If TritonMacros is not available, we can manually define add_triton_library
# We define a fallback macro in case TritonMacros is not found easily
macro(add_triton_library name)
  cmake_parse_arguments(ARG "" "" "DEPENDS;LINK_LIBS" ${ARGN})
  add_library(${name} OBJECT ${ARG_UNPARSED_ARGUMENTS})
  if(ARG_DEPENDS)
    add_dependencies(${name} ${ARG_DEPENDS})
  endif()
  if(ARG_LINK_LIBS)
    target_link_libraries(${name} PUBLIC ${ARG_LINK_LIBS})
  endif()
endmacro()

include_directories(${LLVM_INCLUDE_DIRS})
include_directories(${MLIR_INCLUDE_DIRS})
include_directories(${TRITON_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_BINARY_DIR}/csrc/include) # For generated .h.inc
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/csrc/include)

# Include csrc subdirectories to trigger MLIR TableGen and library building
add_subdirectory(csrc)

# Define the Pybind11 extension module
pybind11_add_module(_C csrc/bindings/triton_anchor_passes.cc)

# Link all the object libraries generated by csrc/lib
target_link_libraries(_C PRIVATE
    TritonLinalgAnalysis
    TritonLinalgPipelines
    TritonLinalgUtils
    ArithToLinalg
    MathToLinalg
    TritonToLinalg
    LinalgExtDialect
    LinalgExtInterface
    LinalgExtTransforms
    MathExtDialect
    AuxiliaryDialect
    TritonTransformsExtend
    MLIRIR
    MLIRPass
    MLIRTransforms
    MLIRRewrite
    MLIRLinalgDialect
    MLIRMathDialect
    MLIRArithDialect
)

set_target_properties(_C PROPERTIES OUTPUT_NAME "_C")

# Install target for scikit-build-core
install(TARGETS _C DESTINATION triton_anchor)
