[build-system]
requires = ["setuptools>=64", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-anchor"
version = "0.2.0"
description = "Unified Triton Compilation Frontend — Plugin-based architecture supporting custom AI accelerators"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Triton Anchor Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = ["filelock"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
sophgo = []
spacemit = []

# ── Plugin entry points ──────────────────────────────────────────────
[project.entry-points."triton.backends"]
# sophgo = "triton_anchor.plugins.sophgo_plugin:SophgoPlugin"
# spacemit = "triton_anchor.plugins.spacemit_plugin:SpacemiTPlugin"

[project.entry-points."triton.dsl_extensions"]

[project.entry-points."triton.adapters"]
