[build-system]
requires = ["setuptools>=64", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-anchor"
version = "0.2.0"
description = "Unified Triton Compilation Frontend — Converting Triton TTIR to hardware-aware Linalg IR"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Triton Anchor Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = ["filelock"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
sophgo = []
spacemit = []

# ── Out-of-tree hardware backends will register here via entry_points ──
[project.entry-points."triton.backends"]

[project.entry-points."triton.dsl_extensions"]

[project.entry-points."triton.adapters"]
