if(NOT ANCHOR_BACKEND STREQUAL "tsingmicro")
    add_subdirectory(TritonToLinalgExperimental)
    add_subdirectory(TritonArithToLinalg)
    add_subdirectory(StructuredToMemref)
    add_subdirectory(ReconcilePtrCasts)
endif()
add_subdirectory(TritonToLinalg)
add_subdirectory(TritonToStructured)
add_subdirectory(TritonPtrToMemref)
add_subdirectory(TritonToUnstructured)
add_subdirectory(UnstructuredToMemref)
